<resources>
    <string name="app_name">SmartKids</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Logout</string>

    <string name="loading">Loading...</string>
    <string name="loading_no_more">没有更多了...</string>
    <string name="authenticator_aty_label">Authenticator</string>
    <string name="splash_label">SmartKids</string>
    <string name="login_label">用户登录</string>
    <string name="register_label">用户注册</string>
    <string name="forget_label">忘记密码</string>

    <string name="tel_number">手机号码</string>
    <string name="new_password">新\t密\t码\t</string>
    <string name="user_password">账户密码</string>
    <string name="register">注\t册</string>
    <string name="login">登          录</string>
    <string name="forget_password">忘记密码</string>
    <string name="go_arround">随便逛逛</string>
    <string name="register_agreement">用户使用及服务协议</string>
    <string name="register_agreement_info">\t本《软件使用及服务协议》（下称《协议》）是您（下称“用户”）与上海至臻文化传播有限公司（以下简称至臻文化）之间关于用户安装、使用萌宝派APP手机软件（包括所有手机系统平台版本，以下简称“萌宝派”）；注册、使用、管理萌宝派账号；以及使用萌宝派相关服务所订立的协议。用户应认真阅读并充分理解此《软件使用及服务协议》。请用户审慎阅读并选择接受或不接受本《协议》。用户的安装、使用、账号获取和登录等行为均被视为对本《协议》的接受，并同意接受各项条款的约束。本《协议》可由至臻文化随时更新，更新后的协议条款一经公布，即代替原来的协议条款，至臻文化不再另行单独通知，用户应注意并阅读更新后的协议条款内容；用户的安装、使用、账号的获取和登录等行为均视为接受更新后的协议条款，并同意接受各项条款的约束。用户可随时查阅最新版本的协议条款。在至臻文化公布修改的协议条款后，用户如不接受修改后的协议条款，请立即停止使用。\n\n一  知识产权声明\n\t“萌宝派”是由至臻文化开发，一切著作权、商标权、专利权、商业秘密等知识产权，以及相关的所有信息内容，包括但不限于：图标、图表、色彩、界面设计、版面框架、数据、电子文档等均受中华人民共和国著作权法、商标法、专利法、反不正当竞争法和相应的国际条约以及其他知识产权法律法规的保护，至臻文化依法享有相应的知识产权。\n\t未经至臻文化书面同意，用户不得以任何目的使用或转让上述知识产权，至臻文化保留追究上述未经许可行为的权利。\n\n二  账号使用需知\n\t2.1 萌宝派账号的所有权归萌宝派，用户完成注册后获得相应的使用权。用户承担萌宝派账号与密码的保管责任，并对所注册的账号及密码下的一切活动负全部责任。\n\t2.2 用户的萌宝派账号在丢失或遗忘密码之后，可以通过绑定的手机进行登录密码重置。没有绑定的，可以联系客服，凭账号相关的个人信息进行验证，并重设密码。萌宝派只负责核对验证信息是否与账号相关信息一致，而不对信息提供者身份进行核实，不对冒名验证行为承担任何责任。同时，萌宝派不承诺通过账号相关的个人信息进行验证一定能找回账号。\n\t2.3 用户不得实施包括但不限于通过萌宝派开发、授权或认可的软件、插件、外挂等登录或使用萌宝派软件和服务：\n\t2.3.1 去除萌宝派中的版权信息；\n\t2.3.2 对萌宝派进行反向工程、反向汇编、反向编译等，同时未经萌宝派事先许可，禁止使用任何设备或手动程序来监视或复制萌宝派客户端所包含任何内容，否则至臻文化有权依法追究法律责任；\n\t2.3.3 使用萌宝派发表、传播、储存违反国家法律、危害国家安全、祖国统一、社会稳定、公序良俗的内容，或任何不当的、侮辱诽谤的、淫秽的、暴力的及任何违反国家法律法规政策的内容；\n\t2.3.4 批量发表、传送、传播广告信息及垃圾信息；\n\t2.3.5 以任何合法或不合法的方式、为任何不合法的目的、或以任何与本协议不一致的方式使用本软件和萌宝派提供的其他服务。\n\t2.4 用户若违反上述规定，萌宝派有权在不事先通知用户的情况下终止用户账号的在线功能。\n\t2.5 使用萌宝派必须遵守国家有关法律和政策并遵守本《协议》。对于用户违法或违反本《协议》的使用而引起的一切责任，由用户负全部责任，一概与萌宝派及合作方无关。若因此导致至臻文化及合作方损失的，至臻文化及合作方有权要求用户赔偿，并有权保留相关记录。\n\t2.6 用户若通过非萌宝派官方网站，或非萌宝派授权网站下载的萌宝派，将可能导致不可预知的风险，由此产生的一切法律责任与纠纷一概与萌宝派无关。\n\t2.7 至臻文化有权在萌宝派投放不同形式的广告信息。\n\n三  隐私保护\n\t3.1 个人隐私信息指可以用于对用户进行个人辨识或涉及个人通信的信息，包括：IP地址，电子邮件地址，以及用户在参与萌宝派及合作方发起的特定活动时填写的姓名、身份证号、手机号码、联系地址。非个人隐私信息指用户在使用萌宝派时的操作状态、设备信息以及使用习惯等明确客观记录在萌宝派服务器端的基本记录信息，和其他一切个人隐私信息范围外的普通信息。\n\t3.2 用户若参与萌宝派及合作方发起的特定活动，需要向萌宝派及合作方提供特定的个人隐私信息，萌宝派及合作方不得向任何其他组织、单位和个人公开、透露相关信息。\n\t3.3 萌宝派会采取合理的措施保护用户的个人隐私信息，除法律或有法律赋予权限的政府部门要求或用户同意等原因外，萌宝派未经用户同意不向除合作方以外的第三方公开、透露用户个人隐私信息。\n\t3.4 为了改善萌宝派的技术和服务，我们将可能会收集、使用用户的非个人隐私信息，以提供更好的用户体验和服务质量。\n\t3.5 用户的宝宝记录会被自动上传至萌宝派服务器，在用户使用萌宝派账号时，可以通过萌宝派服务器自动备份和恢复宝宝记录。\n\n四  法律责任与免责声明\n\t4.1 至臻文化将会尽其商业上的合理努力以保护用户的设备资源及通讯的隐私性和完整性，但是，用户承认和同意至臻文化不能就此事提供任何保证。\n\t4.2 至臻文化可以根据用户的使用状态和行为，为了改进萌宝派的功能、用户体验和服务，开发或调整软件功能。\n\t4.3 至臻文化为保障业务发展和调整的自主权，有权随时自行修改或中断软件服务而不需通知用户。\n\t4.4 在任何情况下因使用或不能使用本软件所产生的直接、间接、偶然、特殊及后续的损害及风险，萌宝派及合作方不承担任何责任。\n\t4.5 因不可抗力、病毒、木马、黑客攻击、系统不稳定、第三方服务器瑕疵、政府行为等原因可能导致的服务中断、数据丢失以及其他的损失和风险的，萌宝派及合作方承诺在第一时间内与相关单位配合，及时处理进行修复，但用户因此而遭受的一切损失，至臻文化及合作方不承担责任。\n\t4.6 用户通过萌宝派与其他用户联系，因受误导或欺骗而导致或可能导致的任何心理、生理上的伤害以及经济上的损失，由过错方依法承担所有责任，一概与至臻文化及合作方无关。\n\t4.7 在本协议中未声明的其他一切权利，仍归至臻文化所有，至臻文化保留对本协议的最终解释权利。</string>
    <string name="tel_code">验证码\t\t</string>
    <string name="set_password">设置密码</string>
    <string name="user_nick">用户昵称</string>
    <string name="hint_tel_number">手机号</string>
    <string name="hint_tel_code">6位数字</string>
    <string name="hint_password">6-12位字母或数字</string>
    <string name="hint_user_nick">7位以下</string>
    <string name="agree">同意</string>
    <string name="get_code">获取验证码</string>
    <string name="submit">提\t交</string>
    <string name="welcome_register">欢迎注册</string>
    <string name="login_replenish_info">信息补充</string>
    <string name="user_identity_choose">身份选择</string>
    <string name="hint_identity">亲属</string>
    <string name="hint_create_or_find_baby">你是要自己创建宝宝信息,还是寻找已创建的宝宝</string>
    <string name="create_baby">创建宝宝</string>
    <string name="welcome_create_baby">请录入宝宝信息:</string>
    <string name="find_baby">寻找宝宝</string>
    <string name="welcome_find_baby">找宝宝</string>
    <string name="baby_photo">宝宝照片</string>
    <string name="banged_tel">绑定手机号</string>
    <string name="baby_nick">宝宝昵称\t\t\t</string>
    <string name="hint_baby_nick">7位以下</string>
    <string name="baby_birthday">宝宝生日\t\t\t</string>
    <string name="hint_baby_birthday">宝宝生日</string>
    <string name="baby_sex">宝宝性别\t\t\t</string>
    <string name="baby_male">小王子</string>
    <string name="baby_female">小公主</string>
    <string name="ok">确  认</string>
    <string name="search">搜索</string>
    <string name="baby_weight">宝宝体重:</string>
    <string name="baby_height">宝宝身高:</string>
    <string name="motion_time">运动时间:</string>
    <string name="physical_status">身体状况:</string>
    <string name="new_record_time">最新记录时间:</string>
    <string name="hint_today_feeling">今天的心情...</string>
    <string name="history">历\t史</string>
    <string name="history_feeling_record">历史心情记录</string>
    <string name="publish_feeling">发\t表</string>
    <string name="qian_dao">签\t到</string>
    <string name="play_photo">相册播放</string>
    <string name="cancel">取\t\t消</string>
    <string name="stop_play_photo">停止播放</string>
    <string name="choose_background">选为背景</string>
    <string name="baby_basic_info">基本信息</string>
    <string name="personal">个人信息</string>
    <string name="attention">关注人群</string>
    <string name="collection">各类收藏</string>
    <string name="issuance">我的发布</string>
    <string name="activity">参加活动</string>
    <string name="status">身份：</string>
    <string name="address">地址：</string>
    <string name="personal_fen">个人积分</string>
    <string name="phone_picture">相册照片</string>
    <string name="exit">注               销</string>
    <string name="expatiation_btn">确               定</string>
    <string name="setting_opinion_btn">提      交</string>
    <string name="expatiation">修改信息</string>
    <string name="expatiation_old_password">原密码</string>
    <string name="expatiation_old_password_text">请输入原密码</string>
    <string name="expatiation_new_password">新密码</string>
    <string name="expatiation_new_password_text">请输入新密码</string>
    <string name="expatiation_contact">联系方式</string>
    <string name="expatiation_contact_text">请输入联系方式</string>
    <string name="expatiation_updata_position">修改身份</string>
    <string name="expatiation_updata_address">修改地址</string>
    <string name="expatiation_updata_address_text">请输入详细地址</string>
    <string name="settings">系统设置</string>
    <string name="settings_clear_buffer">清除缓存</string>
    <string name="settings_opinion">意见反馈</string>
    <string name="settings_using">使用说明</string>
    <string name="settings_self">关于萌宝派</string>
    <string name="settings_responsible">免责声明</string>
    <string name="settings_responsible_text">        鉴于上海至臻文化传播有限公司提供的萌宝派软件平台，在平台上会员或其发布的相关信息均由会员自行提供，会员依法应对其提供的任何 信息承担全部责任。
        任何单位或个人认为萌宝派平台的内容可能涉嫌侵犯其合法权益，应及时向萌宝派提出书面权益通知并提供身份证明、权属证明、具体链接(URL)及详细侵权情况证明。萌宝派在收到上述法律文件后，将会依法尽快移除相关涉嫌侵权的内容。
        萌宝派平台转载作品(包括论坛内容)处于传递更多信息之目的，并不意味萌宝派赞同其观点或证明其内容的真实性。萌宝派尊重合法版权，反对侵权盗版。 若本平台有部分文字、摄像作品等侵害了您的权益，请您立即与萌宝派联系，萌宝派将尽快予以解决。如有任何异议，请发送邮件到mengbaopai@gmail.com
</string>
    <string name="check_version">检查版本更新</string>
    <string name="personal_consuming_records">消费记录</string>
    <string name="personal_phone_picture">相册</string>
    <string name="personal_phone_picture_edit">编辑模式</string>
    <string name="personal_integral_list">积分说明</string>
    <string name="personal_issuance_talk">话题</string>
    <string name="personal_issuance_travels">游记</string>
    <string name="personal_issuance_nutrition">营养</string>
    <string name="personal_issuance_mood">心情</string>
    <string name="personal_issuance_answers">问答</string>
    <string name="personal_collection_hotel">酒店</string>
    <string name="ren">人</string>
    <string name="wan_mei_qin_zi_you">完美亲子游</string>
    <string name="ma_mi_liao_tian_shi">妈咪聊天室</string>
    <string name="meng_bao_huo_dong_ri">萌宝活动日</string>
    <string name="ying_yang_bai_hui">营养百汇</string>
    <string name="zhuan_jia_liu_yan">专家留言</string>
    <string name="jing_cai_wen_da">精彩问答</string>
    <string name="qin_zi_you_ji">亲子游记</string>
    <string name="meng_bao_jiu_dian">萌宝酒店</string>
    <string name="ren_qi">人气榜</string>
    <string name="bin_fen_jia_qi">缤纷假期</string>
    <string name="meng_bao_tuan_you_ji">萌宝团游记</string>
    <string name="lv_you_xiao_tie_shi">旅游小贴士</string>
    <string name="kai_xin_you_le_chang">开心游乐场</string>
    <string name="zhi_ming_guan_jing_qu">知名观景区</string>
    <string name="te_se_qin_zi_jian">特色亲子间</string>
    <string name="tan_tian_shuo_di">谈天说地</string>
    <string name="qing_gan_yi_zhan">情感驿站</string>
    <string name="jing_yan_fen_xiang">经验分享</string>
    <string name="zhi_chang_feng_xiang">职场风尚</string>
    <string name="liu_xing_shi_shang">流行时尚</string>
    <string name="meng_bao_gou_wu">萌宝购物</string>
    <string name="meng_bao_huo_dong">萌宝活动</string>
    <string name="xin_yi_party">新意party</string>
    <string name="huo_dong_ji_shi_lu">活动记实录</string>
    <string name="wen_xin_ju_hui">温馨聚会</string>
    <string name="te_se_sha_long">特色沙龙</string>
    <string name="ju_hui_ji_shi_lu">聚会记实录</string>
    <string name="meng_bao_fu_shi">萌宝辅食</string>
    <string name="yun_ma_yin_shi">孕妈饮食</string>
    <string name="qu_wei_liao_li">趣味料理</string>
    <string name="liu_yan">留言</string>
    <string name="meng_bao_an_li">萌宝案例</string>
    <string name="wan_mei_jie_da">完美解答</string>
    <string name="AB_PK">AB大PK</string>
    <string name="publish">发布</string>
    <string name="ge_lei_kan_dian">各类看点</string>
    <string name="need_login">您还没有登录</string>
    <string name="need_update">当前有最新版本，是否更新</string>
    <string name="txt_bin_fen">【缤纷假期】</string>
    <string name="txt_tuan_you">【萌宝团游记】</string>
    <string name="txt_tie_shi">【旅游小贴士】</string>
    <string name="txt_kai_xin">【开心游乐场】</string>
    <string name="txt_guan_jing">【知名观景区】</string>
    <string name="txt_te_se">【特色亲子间】</string>
    <string name="description">图片描述</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
</resources>
