<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/ui_shape_background_four"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_register_or_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/register_agreement"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/txt_size_17"/>

        <ImageView
            android:id="@+id/btn_back_register_or_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_black_left"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/view_register_group"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_register_agree_info"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/ui_shape_background_five"
            android:maxLines="10"
            android:padding="@dimen/padding_5"
            android:scrollbars="none"
            android:text="@string/register_agreement_info"
            android:textColor="@color/color_dark_gray"
            android:textSize="@dimen/txt_size_17"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/view_register"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/tel_number"
                    android:textColor="@color/color_dig_gray"
                    android:textSize="@dimen/txt_size_17"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_weight="1"
                    android:background="@drawable/ui_shape_background_one"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_register_tel_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/hint_tel_number"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:paddingBottom="@dimen/padding_10"
                        android:paddingLeft="@dimen/padding_5"
                        android:paddingRight="@dimen/padding_5"
                        android:paddingTop="@dimen/padding_10"
                        android:singleLine="true"
                        android:textColor="@color/color_main_black"
                        android:textColorHint="@color/color_hint"
                        android:textSize="@dimen/txt_size_17"/>

                    <ImageView
                        android:id="@+id/btn_clear_register_tel_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_5"
                        android:layout_marginRight="@dimen/margin_5"
                        android:contentDescription="@string/description"
                        android:src="@drawable/error"
                        android:visibility="invisible"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_has_code"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/tel_code"
                        android:textColor="@color/color_dig_gray"
                        android:textSize="@dimen/txt_size_17"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_5"
                        android:layout_weight="1"
                        android:background="@drawable/ui_shape_background_one"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_regiester_code"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:enabled="false"
                            android:hint="@string/hint_tel_code"
                            android:inputType="number"
                            android:maxLength="6"
                            android:paddingBottom="@dimen/padding_10"
                            android:paddingLeft="@dimen/padding_5"
                            android:paddingRight="@dimen/padding_5"
                            android:paddingTop="@dimen/padding_10"
                            android:singleLine="true"
                            android:textColor="@color/color_main_black"
                            android:textColorHint="@color/color_hint"
                            android:textSize="@dimen/txt_size_17"/>

                        <ImageView
                            android:id="@+id/btn_clear_register_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/margin_5"
                            android:layout_marginRight="@dimen/margin_5"
                            android:contentDescription="@string/description"
                            android:src="@drawable/error"
                            android:visibility="invisible"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/set_password"
                        android:textColor="@color/color_dig_gray"
                        android:textSize="@dimen/txt_size_17"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_5"
                        android:layout_weight="1"
                        android:background="@drawable/ui_shape_background_one"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_register_set_password"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:maxLength="12"
                            android:paddingBottom="@dimen/padding_10"
                            android:paddingLeft="@dimen/padding_5"
                            android:paddingRight="@dimen/padding_5"
                            android:paddingTop="@dimen/padding_10"
                            android:singleLine="true"
                            android:textColor="@color/color_main_black"
                            android:textColorHint="@color/color_hint"
                            android:textSize="@dimen/txt_size_17"/>

                        <ImageView
                            android:id="@+id/btn_clear_register_set_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/margin_5"
                            android:layout_marginRight="@dimen/margin_5"
                            android:contentDescription="@string/description"
                            android:src="@drawable/error"
                            android:visibility="invisible"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/user_nick"
                        android:textColor="@color/color_dig_gray"
                        android:textSize="@dimen/txt_size_17"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_5"
                        android:layout_weight="1"
                        android:background="@drawable/ui_shape_background_one"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_register_user_nick"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/hint_user_nick"
                            android:maxLength="7"
                            android:paddingBottom="@dimen/padding_10"
                            android:paddingLeft="@dimen/padding_5"
                            android:paddingRight="@dimen/padding_5"
                            android:paddingTop="@dimen/padding_10"
                            android:singleLine="true"
                            android:textColor="@color/color_main_black"
                            android:textColorHint="@color/color_hint"
                            android:textSize="@dimen/txt_size_17"/>

                        <ImageView
                            android:id="@+id/btn_clear_register_user_nick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/margin_5"
                            android:layout_marginRight="@dimen/margin_5"
                            android:contentDescription="@string/description"
                            android:src="@drawable/error"
                            android:visibility="invisible"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_register_agree"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/selector_ui_shape_background_pressed_one"
            android:gravity="center"
            android:text="同  意"
            android:textColor="@drawable/selector_text_color_pressed_white_to_black"
            android:textSize="@dimen/txt_size_17"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_login"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/user_identity_choose"
                android:textColor="@color/color_dig_gray"
                android:textSize="@dimen/txt_size_17"/>

            <TextView
                android:id="@+id/btn_pop_user_identity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_weight="1"
                android:background="@drawable/ui_shape_background_one"
                android:gravity="center_horizontal"
                android:hint="@string/hint_identity"
                android:maxLength="11"
                android:paddingBottom="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:singleLine="true"
                android:textColor="@color/color_main_black"
                android:textColorHint="@color/color_hint"
                android:textSize="@dimen/txt_size_17"/>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:gravity="center"
            android:text="@string/hint_create_or_find_baby"
            android:textColor="@color/color_dig_gray"
            android:textSize="@dimen/txt_size_17"/>

        <TextView
            android:id="@+id/btn_create_baby"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_ui_shape_background_pressed_one"
            android:gravity="center"
            android:text="创  建  宝  宝"
            android:textColor="@drawable/selector_text_color_pressed_white_to_black"
            android:textSize="@dimen/txt_size_17"/>

        <TextView
            android:id="@+id/btn_find_baby"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/selector_ui_shape_background_pressed_two"
            android:gravity="center"
            android:text="寻  找  宝  宝"
            android:textColor="@drawable/selector_text_color_pressed_white_to_black"
            android:textSize="@dimen/txt_size_17"/>
    </LinearLayout>

</LinearLayout>